# libsort

./: CMakeLists.txt  README.md
include/libsort/: common.hpp  fast_sorts.hpp  slow_sorts.hpp  types.hpp
src/: bubble_sort.cpp
src/fast/: insertion_sort.cpp
src/slow/: bogo_sort.cpp  bubble_sort.cpp  selection_sort.cpp  stooge_sort.cpp
test/: main.cpp
